adding new logic and htmls